--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprint 1: HR Analytics - [Tu Nombre]</title>
+    <title>Sprint 1: HR Analytics - Paolo Ramos</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -25,7 +25,8 @@
         <header>
             <h1>Sprint 1: HR Analytics (Rotación de Empleados)</h1>
             <p><strong>Maestría:</strong> IA y Data Science para la Transformación de Negocios</p>
-            <p><strong>Autor:</strong> [Tu Nombre Aquí]</p>
+            <p><strong>Materia:</strong> Modelamiento de datos I</p>
+            <p><strong>Autor:</strong> Paolo Ramos Mendez</p>
         </header>
 
         <hr>
@@ -41,7 +42,7 @@
             
             <h3>3. Análisis Exploratorio (Paso 1B)</h3>
             <p>Aquí pondrás tus hallazgos del Paso 1B (el análisis de Python).</p>
-            <p>La Desviación Estándar (σ) del Salario Mensual es: <strong>$ [Pega tu resultado aquí]</strong></p>
+            <p>La Desviación Estándar (σ) del Salario Mensual es: 
             
             <img src="histograma_salario.png" alt="Histograma de Salarios Mensuales">
         </section>
