--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
     }
+
+    /* Evita saltos de línea en fórmulas MathJax */
+    mjx-container[jax="SVG"] {
+      display: inline !important;
+      vertical-align: middle !important;
+    }
   </style>
 
   <!-- MathJax Configuración -->
@@ -49,14 +55,12 @@
     </script>
 </head>
 
-
 <body class="bg-gray-900 text-gray-300">
 
+  <!-- Navbar -->
   <nav class="bg-gray-800 shadow-md sticky top-0 z-50">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-      <a href="#" class="text-white text-2xl font-bold">
-        HR Analytics
-      </a>
+      <a href="#" class="text-white text-2xl font-bold">HR Analytics</a>
       <ul class="hidden md:flex space-x-2">
         <li><a href="#section1"
             class="text-gray-300 hover:bg-green-600 hover:text-white px-3 py-2 rounded-md transition duration-300">1.
@@ -99,14 +103,17 @@
     </div>
   </nav>
 
+  <!-- Hero -->
   <section class="bg-gray-800 text-center py-20 px-4 border-b border-gray-700 relative overflow-hidden"
-    style="background-image: url('assets/hr_background.png'); background-size: cover; background-position: center;">
+    style="background-image: url('/assets/hr_background.png'); background-size: cover; background-position: center;">
     <div class="absolute inset-0 bg-black opacity-60"></div>
     <div class="relative z-10 hero-content">
       <h1 class="text-4xl md:text-5xl font-bold text-white mb-4">HR Analytics (Employee Turnover)</h1>
       <p class="text-xl text-gray-200 mb-6">Master's in AI and Data Science for Business Transformation</p>
-      <p class="text-lg text-gray-50 mb-8"><strong>Author:</strong> Paolo Ramos Mendez | <strong>Subject:</strong>
-        Data Modeling I</p>
+      <p class="text-lg text-gray-50 mb-8">
+        <strong>Author:</strong> Paolo Ramos Mendez |
+        <strong>Subject:</strong> Data Modeling I
+      </p>
       <a href="#section1"
         class="bg-green-600 hover:bg-green-700 text-gray-900 font-bold py-3 px-8 rounded-lg text-lg transition duration-300 shadow-lg">
         View Project
@@ -114,6 +121,7 @@
     </div>
   </section>
 
+  <!-- Main Content -->
   <div class="container mx-auto p-4 md:p-8 max-w-4xl">
     <div id="section1"></div>
     <div id="section2"></div>
@@ -122,8 +130,9 @@
     <div id="section5"></div>
   </div>
 
+  <!-- Scripts -->
   <script>
-    // Hamburger menu
+    // Navbar hamburger
     const hamburgerToggle = document.getElementById('hamburgerToggle');
     const navMenu = document.getElementById('navMenu');
     const navLinks = document.querySelectorAll('#navMenu a');
@@ -136,14 +145,29 @@
       });
     });
 
-    // Load external sections
+    // Load sections dynamically + re-render MathJax
     function loadSection(id, file) {
+      // Mensaje temporal mientras carga
+      document.getElementById(id).innerHTML =
+        '<p class="text-gray-500 text-center py-4 animate-pulse">Cargando sección...</p>';
+
       fetch(file)
         .then(res => res.text())
         .then(html => {
           document.getElementById(id).innerHTML = html;
+          // Forzar renderizado de MathJax en contenido cargado
+          if (window.MathJax && window.MathJax.typesetPromise) {
+            MathJax.typesetPromise();
+          }
+        })
+        .catch(err => {
+          console.error('Error cargando sección:', file, err);
+          document.getElementById(id).innerHTML =
+            '<p class="text-red-500 text-center py-4">Error al cargar la sección.</p>';
         });
     }
+
+    // Carga inicial de todas las secciones
     loadSection('section1', 'content/section1.html');
     loadSection('section2', 'content/section2.html');
     loadSection('section3', 'content/section3.html');
