--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 
   <!-- Navbar -->
   <nav class="bg-gray-800 shadow-md sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex flex-wrap justify-between items-center">
       <!-- Logo -->
-      <a href="#" class="text-white text-2xl font-bold whitespace-nowrap">
+      <a href="#" class="text-white text-2xl font-bold whitespace-nowrap flex-shrink-0">
         HR Analytics
       </a>
 
-      <!-- Menú principal -->
-      <ul class="hidden md:flex space-x-6 text-sm font-medium">
+      <!-- Menú principal (desktop) -->
+      <ul class="hidden md:flex flex-wrap space-x-6 text-sm font-medium">
         <li><a href="#section1" class="text-gray-300 hover:text-green-400 transition">1. Problema</a></li>
         <li><a href="#section2" class="text-gray-300 hover:text-green-400 transition">2. Técnica</a></li>
         <li><a href="#section3" class="text-gray-300 hover:text-green-400 transition">3. Competitors</a></li>
@@ -75,7 +75,7 @@
       </ul>
 
       <!-- Botón hamburguesa -->
-      <button id="hamburgerToggle" class="md:hidden text-white focus:outline-none">
+      <button id="hamburgerToggle" class="md:hidden text-white focus:outline-none ml-auto">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
         </svg>
