--- a/index.html
+++ b/index.html
@@ -58,28 +58,34 @@
 <body class="bg-gray-900 text-gray-300">
 
   <!-- Navbar -->
-  <nav class="bg-gray-800 shadow-md sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-6 py-4 flex flex-wrap justify-between items-center">
+  <!-- Navbar fijo superior -->
+  <nav class="bg-gray-800 shadow-md sticky top-0 z-50 w-full">
+    <div class="max-w-screen-xl mx-auto flex items-center justify-between px-6 py-4 flex-wrap">
+
       <!-- Logo -->
-      <a href="#" class="text-white text-2xl font-bold whitespace-nowrap flex-shrink-0">
-        HR Analytics
-      </a>
+      <div class="flex items-center flex-shrink-0 text-white mr-6">
+        <a href="#" class="font-bold text-2xl tracking-tight whitespace-nowrap">
+          HR Analytics
+        </a>
+      </div>
 
       <!-- Menú principal (desktop) -->
-      <ul class="hidden md:flex flex-wrap space-x-6 text-sm font-medium">
-        <li><a href="#section1" class="text-gray-300 hover:text-green-400 transition">1. Problema</a></li>
-        <li><a href="#section2" class="text-gray-300 hover:text-green-400 transition">2. Técnica</a></li>
-        <li><a href="#section3" class="text-gray-300 hover:text-green-400 transition">3. Competitors</a></li>
-        <li><a href="#section4" class="text-gray-300 hover:text-green-400 transition">4. Comparison</a></li>
-        <li><a href="#section5" class="text-gray-300 hover:text-green-400 transition">5. Conclusions</a></li>
-      </ul>
+      <div class="hidden md:flex items-center space-x-6 text-sm font-medium">
+        <a href="#section1" class="text-gray-300 hover:text-green-400 transition">1. Problema</a>
+        <a href="#section2" class="text-gray-300 hover:text-green-400 transition">2. Técnica</a>
+        <a href="#section3" class="text-gray-300 hover:text-green-400 transition">3. Competitors</a>
+        <a href="#section4" class="text-gray-300 hover:text-green-400 transition">4. Comparison</a>
+        <a href="#section5" class="text-gray-300 hover:text-green-400 transition">5. Conclusions</a>
+      </div>
 
-      <!-- Botón hamburguesa -->
-      <button id="hamburgerToggle" class="md:hidden text-white focus:outline-none ml-auto">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-      </button>
+      <!-- Botón menú móvil -->
+      <div class="md:hidden flex items-center ml-auto">
+        <button id="hamburgerToggle" class="text-white focus:outline-none">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
     </div>
 
     <!-- Menú desplegable móvil -->
