--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <!-- TailwindCSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    tailwind.config = {
-      darkMode: 'class'
-    }
+    tailwind.config = { darkMode: 'class' }
   </script>
 
   <!-- Estilos globales -->
@@ -31,7 +29,7 @@
     }
   </style>
 
-  <!-- MathJax Configuración -->
+  <!-- Configuración MathJax -->
   <script>
     window.MathJax = {
       tex: {
@@ -46,11 +44,8 @@
     };
   </script>
 
-  <!-- MathJax Script CDN -->
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" onload="document.addEventListener('DOMContentLoaded', () => {
-      if (window.MathJax && window.MathJax.typesetPromise) {
-        MathJax.typesetPromise();
-      }
+      if (window.MathJax && window.MathJax.typesetPromise) MathJax.typesetPromise();
     });">
     </script>
 </head>
@@ -58,19 +53,18 @@
 <body class="bg-gray-900 text-gray-300">
 
   <!-- Navbar -->
-  <!-- Navbar fijo superior -->
   <nav class="bg-gray-800 shadow-md sticky top-0 z-50 w-full">
-    <div class="max-w-screen-xl mx-auto flex items-center justify-between px-6 py-4 flex-wrap">
+    <div class="max-w-screen-xl mx-auto grid grid-cols-2 items-center px-6 py-4">
 
       <!-- Logo -->
-      <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <a href="#" class="font-bold text-2xl tracking-tight whitespace-nowrap">
+      <div class="flex items-center">
+        <a href="#" class="text-white text-2xl font-bold whitespace-nowrap">
           HR Analytics
         </a>
       </div>
 
       <!-- Menú principal (desktop) -->
-      <div class="hidden md:flex items-center space-x-6 text-sm font-medium">
+      <div class="hidden md:flex justify-end items-center space-x-6 text-sm font-medium">
         <a href="#section1" class="text-gray-300 hover:text-green-400 transition">1. Problema</a>
         <a href="#section2" class="text-gray-300 hover:text-green-400 transition">2. Técnica</a>
         <a href="#section3" class="text-gray-300 hover:text-green-400 transition">3. Competitors</a>
@@ -79,7 +73,7 @@
       </div>
 
       <!-- Botón menú móvil -->
-      <div class="md:hidden flex items-center ml-auto">
+      <div class="md:hidden flex justify-end">
         <button id="hamburgerToggle" class="text-white focus:outline-none">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -100,7 +94,7 @@
 
   <!-- Hero -->
   <section class="bg-gray-800 text-center py-20 px-4 border-b border-gray-700 relative overflow-hidden"
-    style="background-image: url('/assets/hr_background.png'); background-size: cover; background-position: center;">
+    style="background-image: url('./assets/hr_background.png'); background-size: cover; background-position: center;">
     <div class="absolute inset-0 bg-black opacity-60"></div>
     <div class="relative z-10 hero-content">
       <h1 class="text-4xl md:text-5xl font-bold text-white mb-4">HR Analytics (Employee Turnover)</h1>
@@ -116,7 +110,7 @@
     </div>
   </section>
 
-  <!-- Main Content -->
+  <!-- Contenido principal -->
   <div class="container mx-auto p-4 md:p-8 max-w-4xl">
     <div id="section1"></div>
     <div id="section2"></div>
@@ -127,7 +121,7 @@
 
   <!-- Scripts -->
   <script>
-    // Navbar hamburger
+    // Navbar móvil
     const hamburgerToggle = document.getElementById('hamburgerToggle');
     const navMenu = document.getElementById('navMenu');
     const navLinks = document.querySelectorAll('#navMenu a');
@@ -135,25 +129,18 @@
       navMenu.classList.toggle('hidden');
     });
     navLinks.forEach(link => {
-      link.addEventListener('click', () => {
-        navMenu.classList.add('hidden');
-      });
+      link.addEventListener('click', () => navMenu.classList.add('hidden'));
     });
 
-    // Load sections dynamically + re-render MathJax
+    // Carga dinámica de secciones
     function loadSection(id, file) {
-      // Mensaje temporal mientras carga
       document.getElementById(id).innerHTML =
         '<p class="text-gray-500 text-center py-4 animate-pulse">Cargando sección...</p>';
-
       fetch(file)
         .then(res => res.text())
         .then(html => {
           document.getElementById(id).innerHTML = html;
-          // Forzar renderizado de MathJax en contenido cargado
-          if (window.MathJax && window.MathJax.typesetPromise) {
-            MathJax.typesetPromise();
-          }
+          if (window.MathJax && window.MathJax.typesetPromise) MathJax.typesetPromise();
         })
         .catch(err => {
           console.error('Error cargando sección:', file, err);
@@ -162,7 +149,7 @@
         });
     }
 
-    // Carga inicial de todas las secciones
+    // Cargar todas las secciones
     loadSection('section1', 'content/section1.html');
     loadSection('section2', 'content/section2.html');
     loadSection('section3', 'content/section3.html');
