--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <!-- TailwindCSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    tailwind.config = { darkMode: 'class' }
+    tailwind.config = {
+      darkMode: 'class'
+    }
   </script>
 
   <!-- Estilos globales -->
@@ -22,14 +24,48 @@
       -moz-osx-font-smoothing: grayscale;
     }
 
-    /* Evita saltos de línea en fórmulas MathJax */
+    /* 🔧 Mantiene fórmulas en línea sin saltos */
     mjx-container[jax="SVG"] {
       display: inline !important;
       vertical-align: middle !important;
     }
+
+    /* 🔧 FIX para GitHub Pages: evita compresión del contenido */
+    .container {
+      max-width: 90vw !important;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    /* 🔧 Asegura padding lateral consistente */
+    .container>div {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+
+    /* 🔧 Restaura ancho ideal en pantallas grandes */
+    @media (min-width: 1024px) {
+      .container {
+        max-width: 1100px !important;
+      }
+    }
+
+    /* 🔧 Estilo general del fondo */
+    body {
+      background-color: #111827;
+      /* gray-900 */
+      color: #d1d5db;
+      /* gray-300 */
+    }
+
+    /* 🔧 Mejor contraste en navbar y hero */
+    nav {
+      background-color: #1f2937 !important;
+      /* gray-800 */
+    }
   </style>
 
-  <!-- Configuración MathJax -->
+  <!-- MathJax Configuración -->
   <script>
     window.MathJax = {
       tex: {
@@ -44,8 +80,11 @@
     };
   </script>
 
+  <!-- MathJax Script CDN -->
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" onload="document.addEventListener('DOMContentLoaded', () => {
-      if (window.MathJax && window.MathJax.typesetPromise) MathJax.typesetPromise();
+      if (window.MathJax && window.MathJax.typesetPromise) {
+        MathJax.typesetPromise();
+      }
     });">
     </script>
 </head>
