--- a/content/section2.html
+++ b/content/section2.html
@@ -1,143 +1,166 @@
-<section id="section2-tecnica" class="bg-gray-800 p-6 md:p-8 rounded-lg shadow-xl mb-12">
+<section id="section2" class="bg-gray-800 p-6 md:p-8 rounded-lg shadow-xl mb-12">
 
     <h2 class="text-3xl font-bold text-green-500 mb-5 border-b border-gray-700 pb-3">
-        Sección 2: Determinación de la Técnica Analítica
+        Sección 2: Análisis Exploratorio de Datos (EDA)
     </h2>
+    <p class="text-lg mb-6 text-gray-300 leading-relaxed">
+        El Análisis Exploratorio de Datos (EDA) es la fase donde se examina el conjunto de datos para comprender su estructura, calidad y distribuciones. Esta etapa valida visualmente las hipótesis de la Sección 1 y justifica las decisiones de preprocesamiento antes de construir el modelo predictivo.
+    </p>
 
-    <h3 class="text-2xl font-semibold text-white mb-3">
-        1. Justificación de la Técnica Seleccionada
+    <h3 class="text-2xl font-semibold text-white mb-3 mt-6 border-b border-gray-700 pb-2">
+        2.1 Estructura, Tipos y Diccionario de Variables
     </h3>
 
+    <h4 class="text-xl font-semibold text-white mb-2">Muestra de Datos (`df.head()`)</h4>
     <p class="text-lg mb-4 text-gray-300 leading-relaxed">
-        Dado que la variable objetivo <strong>rotación de empleados</strong> (<code class="bg-gray-700 px-2 py-1 rounded">Attrition</code>)
-        es de naturaleza <strong>categórica binaria</strong> —indicando si un empleado
-        <em>permanece</em> o <em>abandona</em> la organización—, se requiere una técnica de
-        <strong>modelamiento supervisado de clasificación</strong> que permita estimar la
-        probabilidad de ocurrencia de un evento.
+        El estudio se basa en el conjunto de datos de IBM, que consta de <strong>1,470 registros</strong> y un total de <strong>35 variables</strong>, tal como se confirma en el notebook `HR_Analitycs.ipynb`.
     </p>
 
+    <img src="assets/df_head_sample.png" alt="Muestra de las primeras 5 filas del dataset" class="rounded-lg shadow-md my-4 border border-gray-700 mx-auto max-w-full">
+    <p class="text-xs text-gray-400 text-center italic mt-2">
+        Muestra obtenida directamente del notebook `HR_Analitycs.ipynb`.
+    </p>
+
+    <h4 class="text-xl font-semibold text-white mb-2 mt-6">Diccionario y Clasificación de Variables Clave</h4>
     <p class="text-lg mb-4 text-gray-300 leading-relaxed">
-        Entre las alternativas posibles (árboles de decisión, <i>Random Forest</i>, <i>Support Vector Machines</i>),
-        se selecciona la <strong>Regresión Logística</strong> como modelo principal por las siguientes razones:
+        La clasificación es crucial para el preprocesamiento de datos (escalado y *dummy variables*). A continuación, se muestra una **muestra de las variables más relevantes** utilizadas para probar las hipótesis y el modelamiento, extraída del diccionario completo.
     </p>
 
-    <ul class="list-disc list-inside text-gray-300 mb-6 ml-4 space-y-3">
-        <li><strong>Interpretabilidad:</strong> permite cuantificar el efecto de cada variable independiente
-            sobre la probabilidad de rotación mediante los coeficientes $\beta$, expresables como <i>odds ratios</i>.
-        </li>
-        <li><strong>Compatibilidad estadística:</strong> cumple los supuestos de independencia y linealidad
-            entre los predictores y la log-odds del evento, adecuados para las variables del dataset.</li>
-        <li><strong>Eficiencia computacional:</strong> requiere menos recursos de entrenamiento en comparación
-            con modelos no lineales más complejos, facilitando la validación cruzada.</li>
-        <li><strong>Aplicabilidad práctica:</strong> los resultados pueden ser interpretados por
-            analistas y gestores de talento humano sin necesidad de conocimientos avanzados de IA.</li>
-    </ul>
+    <div class="bg-gray-700 p-4 rounded-lg overflow-x-auto text-sm mb-6">
+        <table class="min-w-full divide-y divide-gray-600">
+            <thead class="bg-gray-600">
+                <tr>
+                    <th class="p-2 text-left text-xs font-medium text-white uppercase tracking-wider">Variable</th>
+                    <th class="p-2 text-left text-xs font-medium text-white uppercase tracking-wider">Tipo</th>
+                    <th class="p-2 text-left text-xs font-medium text-white uppercase tracking-wider">Descripción Breve</th>
+                    <th class="p-2 text-left text-xs font-medium text-white uppercase tracking-wider">Ejemplo</th>
+                </tr>
+            </thead>
+            <tbody class="divide-y divide-gray-700 text-gray-300">
+                <tr>
+                    <td class="p-2 font-semibold text-green-400">Attrition (Objetivo)</td>
+                    <td class="p-2">Categórica Binaria</td>
+                    <td class="p-2">Si el empleado renunció o no.</td>
+                    <td class="p-2">Yes / No</td>
+                </tr>
+                <tr>
+                    <td class="p-2">OverTime</td>
+                    <td class="p-2">Categórica Nominal</td>
+                    <td class="p-2">Indica si trabaja horas extra (clave H₁).</td>
+                    <td class="p-2">Yes / No</td>
+                </tr>
+                <tr>
+                    <td class="p-2">JobSatisfaction</td>
+                    <td class="p-2">Ordinal</td>
+                    <td class="p-2">Grado de satisfacción laboral (clave H₅).</td>
+                    <td class="p-2">1 (Baja) a 4 (Muy Alta)</td>
+                </tr>
+                <tr>
+                    <td class="p-2">TotalWorkingYears</td>
+                    <td class="p-2">Numérica Discreta</td>
+                    <td class="p-2">Número total de años de experiencia laboral.</td>
+                    <td class="p-2">8, 15, 20, etc.</td>
+                </tr>
+                <tr>
+                    <td class="p-2">YearsAtCompany</td>
+                    <td class="p-2">Numérica Discreta</td>
+                    <td class="p-2">Antigüedad del empleado en la empresa actual.</td>
+                    <td class="p-2">5, 10, 20, etc.</td>
+                </tr>
+            </tbody>
+        </table>
+        <p class="text-xs text-gray-400 mt-2">
+            El conjunto completo incluye 35 variables. Los tipos categóricos binarios (`Attrition`) y ordinales (`JobSatisfaction`) son cruciales.
+        </p>
+    </div>
 
-    <p class="text-lg text-gray-300 leading-relaxed mb-6">
-        Este modelo servirá como punto de partida (<i>baseline</i>) para comparar su desempeño con
-        modelos más complejos en la siguiente fase, donde se aplicarán técnicas competidoras
-        como <i>Random Forest</i> y <i>XGBoost</i>.
-    </p>
-
-</section>
-
-<section id="section2-funcion" class="bg-gray-800 p-6 md:p-8 rounded-lg shadow-xl mb-12">
-
-    <h3 class="text-2xl font-semibold text-white mb-4 border-b border-gray-700 pb-2">
-        2. Representación Matemática del Modelo
+    <h3 class="text-2xl font-semibold text-white mb-3 mt-6 border-b border-gray-700 pb-2">
+        2.2 Análisis Univariado: El Desafío del Desbalance
     </h3>
 
-    <p class="text-lg mb-4 text-gray-300 leading-relaxed">
-        La <strong>Regresión Logística Binaria</strong> modela la relación entre una variable dependiente
-        categórica (<code class="bg-gray-700 px-2 py-1 rounded">Attrition</code>) y un conjunto de variables independientes explicativas,
-        estimando la <strong>probabilidad de ocurrencia</strong> de un evento (renuncia del empleado).
-    </p>
-
-    <p class="text-lg mb-4 text-gray-300 leading-relaxed">
-        La función logística o sigmoide transforma la combinación lineal de las variables predictoras
-        en una probabilidad comprendida entre 0 y 1:
-    </p>
-
-    <!-- Fórmula principal en bloque -->
-    <div class="bg-gray-900 p-6 rounded-lg text-center my-6 overflow-x-auto shadow-inner">
-        $$
-        P(\text{Attrition} = 1) = \frac{1}{1 + e^{-(\beta_0 + \beta_1 X_1 + \beta_2 X_2 + \cdots + \beta_n X_n)}}
-        $$
-    </div>
-
-    <p class="text-lg mb-3 text-gray-300 leading-relaxed font-semibold">
-        Donde:
-    </p>
-
-    <div class="border-l-4 border-green-400 bg-gray-900/50 p-5 rounded-r-lg text-gray-300 space-y-3 shadow-inner mb-6">
-        <p class="flex items-start">
-            <span class="font-mono text-green-300 mr-2">•</span>
-            <span>$P(\text{Attrition} = 1)$ — probabilidad de que un empleado abandone la organización.</span>
+    <div class="bg-yellow-900/20 border-l-4 border-yellow-400 rounded-r-lg p-5 mb-4">
+        <p class="text-yellow-300 font-semibold text-lg mb-2">
+            Hallazgo Clave: Fuerte Desbalance (84% / 16%)
         </p>
-        <p class="flex items-start">
-            <span class="font-mono text-green-300 mr-2">•</span>
-            <span>$\beta_0$ — término independiente o constante del modelo.</span>
-        </p>
-        <p class="flex items-start">
-            <span class="font-mono text-green-300 mr-2">•</span>
-            <span>$\beta_i$ — coeficiente asociado a cada variable predictora $X_i$, que representa su influencia en la probabilidad de rotación.</span>
-        </p>
-        <p class="flex items-start">
-            <span class="font-mono text-green-300 mr-2">•</span>
-            <span>$e$ — base del logaritmo natural (≈ 2.71828).</span>
+        <p class="text-gray-300 leading-relaxed">
+            El gráfico de distribución confirma un **desbalance de clases severo**: **83.88% (No Rotación)** vs. **16.12% (Sí Rotación)**. Este desafío justifica la necesidad de usar **Recall** y **ROC-AUC** como métricas principales, y de aplicar técnicas de ajuste de pesos en el modelo (Sección 3).
         </p>
     </div>
-
-    <p class="text-lg mb-4 text-gray-300 leading-relaxed">
-        La ecuación lineal interna del modelo se expresa como:
-    </p>
-
-    <!-- Fórmula logit -->
-    <div class="bg-gray-900 p-6 rounded-lg text-center my-6 overflow-x-auto shadow-inner">
-        $$
-        \text{logit}(P) = \ln\left(\frac{P}{1 - P}\right) = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \cdots + \beta_n X_n
-        $$
-    </div>
-
-    <p class="text-lg text-gray-300 leading-relaxed mb-6">
-        En este caso, la función logit permite interpretar los coeficientes del modelo en términos de
-        <strong class="text-green-400">odds ratios</strong>, donde un valor positivo de $\beta_i$ indica un aumento en la probabilidad
-        de rotación, mientras que un valor negativo sugiere un efecto protector o de permanencia.
-    </p>
-
-</section>
-
-<!-- Sección de Análisis Exploratorio -->
-<section class="bg-gray-800 p-6 md:p-8 rounded-lg shadow-xl mb-12">
     
-    <h3 class="text-2xl font-semibold text-white mb-4 border-b border-gray-700 pb-2">
-        3. Análisis Exploratorio de Datos (EDA)
+    <p class="text-sm text-gray-400 mt-2 mb-4">
+        <i>Gráfico 2.2: Distribución de la Variable Attrition (Interactiva - Plotly)</i>
+    </p>
+    <iframe src="assets/plot_attrition.html" 
+            class="w-full h-96 rounded-lg shadow-md my-4 border border-gray-700"
+            frameborder="0"
+            scrolling="no">
+    </iframe>
+</section>
+
+<section id="section2-bivariado" class="bg-gray-800 p-6 md:p-8 rounded-lg shadow-xl mb-12">
+    <h3 class="text-2xl font-semibold text-white mb-3 mt-6 border-b border-gray-700 pb-2">
+        2.3 Análisis Bivariado (Prueba Visual de Hipótesis)
     </h3>
-
-    <p class="text-lg text-gray-300 leading-relaxed">
-        Antes de aplicar el modelo de <strong>Regresión Logística</strong>, se realizó un
-        <strong>análisis exploratorio de datos (EDA)</strong> sobre el conjunto
-        <code class="bg-gray-700 px-2 py-1 rounded">HREmployee_data.csv</code> con el propósito de comprender la estructura y
-        calidad de la información, identificar posibles valores atípicos y evaluar la
-        distribución de las variables más relevantes.
+    <p class="text-lg mb-4 text-gray-300 leading-relaxed">
+        Se cruza la variable objetivo con los principales factores de riesgo propuestos en la Sección 1 para obtener una primera validación visual de las hipótesis.
     </p>
 
-    <p class="text-lg mt-4 text-gray-300 leading-relaxed">
-        Esta etapa permitió visualizar patrones iniciales de comportamiento entre la
-        <em>rotación de empleados</em> (<code class="bg-gray-700 px-2 py-1 rounded">Attrition</code>) y factores como:
+    <div class="grid md:grid-cols-2 gap-4 mb-4">
+        <div class="bg-green-900/20 border border-green-500/30 rounded-lg p-4">
+            <div class="flex items-start mb-2">
+                <span class="text-2xl mr-2">⏰</span>
+                <p class="text-lg font-semibold text-green-300">Factor de Riesgo #1: Horas Extra (`OverTime`)</p>
+            </div>
+            <p class="text-gray-300 text-sm mb-4">
+                <strong>Hipótesis:</strong> Trabajar en horas extra estará **positivamente asociado** con rotación.
+            </p>
+            <iframe src="assets/plot_overtime.html" 
+                    class="w-full h-48 rounded-lg shadow-md my-4 border border-gray-700"
+                    frameborder="0" scrolling="no">
+            </iframe>
+            <div class="bg-green-900/50 border-l-4 border-green-400 rounded-r-lg p-3">
+                <p class="text-green-300 font-semibold text-sm">✓ Confirmada: Los empleados con Horas Extra tienen una tasa de rotación superior al 30%, triplicando la tasa del grupo sin este factor.</p>
+            </div>
+        </div>
+
+        <div class="bg-red-900/20 border border-red-500/30 rounded-lg p-4">
+            <div class="flex items-start mb-2">
+                <span class="text-2xl mr-2">😊</span>
+                <p class="text-lg font-semibold text-red-300">Factor Protector: Satisfacción (`JobSatisfaction`)</p>
+            </div>
+            <p class="text-gray-300 text-sm mb-4">
+                <strong>Hipótesis:</strong> Mayor satisfacción estará **negativamente asociada** con rotación.
+            </p>
+            <iframe src="assets/plot_satisfaction.html" 
+                    class="w-full h-48 rounded-lg shadow-md my-4 border border-gray-700"
+                    frameborder="0" scrolling="no">
+            </iframe>
+            <div class="bg-red-900/50 border-l-4 border-red-400 rounded-r-lg p-3">
+                <p class="text-red-300 font-semibold text-sm">✓ Confirmada: A menor satisfacción (Nivel 1), el riesgo de rotación es mucho mayor, evidenciando una clara relación lineal inversa.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="section2-correlacion" class="bg-gray-800 p-6 md:p-8 rounded-lg shadow-xl mb-12">
+    <h3 class="text-2xl font-semibold text-white mb-3 mt-6 border-b border-gray-700 pb-2">
+        2.4 Matriz de Correlación y Multicolinealidad
+    </h3>
+    <p class="text-lg mb-4 text-gray-300 leading-relaxed">
+        Se evalúa la correlación entre las **variables predictoras numéricas** mediante un *Heatmap* para asegurar que el modelo de Regresión Logística (Sección 3) no se vea afectado por la **multicolinealidad** (variables que miden conceptos similares).
     </p>
 
-    <ul class="list-disc list-inside text-gray-300 my-4 ml-4 space-y-2">
-        <li><strong>Satisfacción laboral</strong> (<code class="bg-gray-700 px-2 py-1 rounded">JobSatisfaction</code>)</li>
-        <li><strong>Trabajo en horas extras</strong> (<code class="bg-gray-700 px-2 py-1 rounded">OverTime</code>)</li>
-        <li><strong>Años en la empresa</strong> (<code class="bg-gray-700 px-2 py-1 rounded">YearsAtCompany</code>)</li>
-        <li><strong>Desempeño</strong> (<code class="bg-gray-700 px-2 py-1 rounded">PerformanceRating</code>)</li>
-        <li><strong>Equilibrio vida–trabajo</strong> (<code class="bg-gray-700 px-2 py-1 rounded">WorkLifeBalance</code>)</li>
-    </ul>
+    <div class="bg-blue-900/20 border-l-4 border-blue-400 rounded-r-lg p-5 mb-4">
+        <p class="text-blue-300 font-semibold mb-2">💡 Decisión Metodológica</p>
+        <ul class="list-disc list-inside text-gray-300 space-y-2 text-sm">
+            <li>El Heatmap revela alta correlación en el grupo de variables de **Antigüedad** (ej. `YearsAtCompany` y `YearsWithCurrManager` **r ≈ 0.77**), un hallazgo extraído del notebook.</li>
+            <li>**Acción:** Para mantener la **interpretabilidad** y la **estabilidad** del modelo de regresión, se procederá a la **Selección de Características (Feature Selection)**, eliminando las variables redundantes antes del entrenamiento.</li>
+        </ul>
+    </div>
 
-    <p class="text-lg text-gray-300 leading-relaxed">
-        Los resultados de esta exploración inicial sirvieron para confirmar las hipótesis
-        planteadas y establecer una base empírica sólida para el modelamiento estadístico posterior.
-    </p>
-
+    <iframe src="assets/plot_heatmap.html" 
+            class="w-full h-96 rounded-lg shadow-md my-4 border border-gray-700"
+            frameborder="0"
+            scrolling="no">
+    </iframe>
 </section>
