--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <!-- Menú principal (desktop) -->
       <div class="hidden md:flex justify-end items-center space-x-6 text-sm font-medium">
         <a href="#section1" class="text-gray-300 hover:text-green-400 transition duration-200">1. Problema</a>
-        <a href="#section2" class="text-gray-300 hover:text-green-400 transition duration-200">2. Técnica</a>
+        <a href="#section2" class="text-gray-300 hover:text-green-400 transition duration-200">2. Determinación</a>
         <a href="#section3" class="text-gray-300 hover:text-green-400 transition duration-200">3. Competidores</a>
         <a href="#section4" class="text-gray-300 hover:text-green-400 transition duration-200">4. Comparación</a>
         <a href="#section5" class="text-gray-300 hover:text-green-400 transition duration-200">5. Conclusiones</a>
@@ -157,7 +157,7 @@
       <a href="#section1" class="block text-gray-300 hover:bg-green-600 hover:text-white px-6 py-3 transition">1.
         Problema</a>
       <a href="#section2" class="block text-gray-300 hover:bg-green-600 hover:text-white px-6 py-3 transition">2.
-        Técnica</a>
+        Determinación</a>
       <a href="#section3" class="block text-gray-300 hover:bg-green-600 hover:text-white px-6 py-3 transition">3.
         Competidores</a>
       <a href="#section4" class="block text-gray-300 hover:bg-green-600 hover:text-white px-6 py-3 transition">4.
@@ -287,8 +287,6 @@
       loadSection('section1', 'content/section1.html');
       loadSection('section2', 'content/section2.html');
       loadSection('section3', 'content/section3.html');
-      loadSection('section4', 'content/section4.html');
-      loadSection('section5', 'content/section5.html');
     });
   </script>
 </body>
