--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <span class="text-green-400">(Employee Turnover)</span>
         </h1>
         <p class="text-xl md:text-2xl text-gray-200 mb-6 font-light">
-          Máster en IA y Ciencia de Datos para la Transformación Empresarial
+          MAESTRÍA EN INTELIGENCIA ARTIFICIAL Y DATA SCIENCE PARA LA TRANSFORMACIÓN DE NEGOCIOS
         </p>
         <p class="text-base md:text-lg text-gray-100 mb-10 max-w-2xl mx-auto">
           <strong class="text-green-400">Autor:</strong> Paolo Ramos Méndez |
